Реализованы все основные задачи. Добавлен конфиг.
